tests/expects/enum_failure/test_enum_pointer_base_type.truk
enum Status : *i32 {
    OK = 0,
    ERROR = 1
}

fn main() : i32 {
    return 0;
}
